# convocart

./: .dockerignore  .gitignore  AI_INTEGRATION_GUIDE.md  Dockerfile  Dockerfile.production  IMPLEMENTATION_GUIDE.md  Makefile  README.md  TWILIO_SETUP.md  all_code.txt  docker-compose.production.yml  fashion_template.csv  fix_dependencies.py  package.json  pyproject.toml  requirements.txt  reset_password.py  restaurant_template.csv  sample_data_generator.py  tailwind.config.js  test_comprehensive_fixes.py  update_groups_table.py  validate_modernization.py
alembic/: env.py
alembic/versions/: 12885d274764_add_flow_system_models_flow_flowstate_.py  2b024d67e07e_update_phone_number_validation_and_.py  3baa46d18be9_initial_migrations_001.py  6593a5bd9ced_add_session_metadata_field_to_.py  8fde940613cc_add_cart_recovery_system.py  c8418221aad8_initial_postgresql_migration.py  c975018df037_add_indexes_and_improve_schema.py  eff12dfd5134_add_enhanced_inventory_models.py  f4e015994771_add_enhanced_inventory_models.py  phone_field_size_increase.py
app/: config.py  database.py  main.py  models.py  models_inventory_enhanced.py  templates_config.py
app/middleware/: __init__.py  security.py
app/routers/: admin.py  api_datatables.py  cart_recovery.py  data_import.py  debug.py  flows.py  health.py  users.py  users.py.backup  webhook.py
app/routers/admin/: __init__.py  auth.py  dashboard.py  groups.py  inventory.py  (+2 more)
app/services/: ai_agent.py  ai_agent_cart_recovery.py  analytics_service.py  api_monitor.py  business_config_service.py  business_templates.py  cache_service.py  cart_abandonment_service.py  cart_recovery_analytics.py  cart_recovery_scheduler.py  conversation_debugger.py  data_import_service.py  enhanced_inventory_service.py  enhanced_memory_service.py  flow_engine.py  inventory_migration.py  inventory_service.py  rate_limiter.py  session_manager.py  webhook_security.py  whatsapp.py
app/templates/: admin_base.html  api_usage.html  base.html  dashboard.html  data_import.html  data_import_htmx.html  flow_editor.html  flows.html  group_form.html  groups.html  improved_navbar.html  intro.html  link_generator.html  login.html  orders.html  settings.html  user_form.html  users.html
app/utils/: config_validator.py  query_optimizer.py  security.py  sql_security.py
scripts/: migrate_to_flow_system.py  setup_postgresql.py
tests/: test_state_management_modernization.py
(+30 files in other folders)
